Find a pathInA Labyrinth